--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <!-- Navigation bar -->
     <header>
-        <h1>Desire's Portfolio</h1>
+        
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#"><h1>Desire's Portfolio</h1></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#"> Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#"> Tech Enthusiast </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
+                        <a class="nav-link" href="#">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About Me / Contact</a>
                     </li>
                 </ul>
             </div>
@@ -40,30 +43,36 @@
     </header>
     <!-- Hero Section -->
     <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-            featured content or information.</p>
+        <img src="./images/IMG_2171.jpg" alt="Desire" class="float-left" width="300px" height="300px">
+        <h1 class="display-4"> Experienced Math Specialist Class Teacher Transitioning to Web Development/Software Engineering</h1>
+        <p class="lead">Specializing in web development, I champion software engineering excellence through rigorous testing,
+            employing both automated and manual methods. Meticulously identifying and rectifying bugs, I ensure that
+            software attains the highest standards before reaching end-users.</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <p>Transitioning from an accomplished teaching career to the tech industry, I leverage my extensive experience
+            across diverse schools, infusing projects with creativity, determination, and analytical skills—particularly in
+            mathematics.</p>
         <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/desire-anunobi-20020797/" role="button">LinkedIn Profile</a>
         </p>
     </div>
+    <br>
     <!-- Work Section -->
+    <h2></h2>
     <div class="container">
         <div class="row">
-            <div class="col-sm">
-                One of three columns
+            <div class="col-sm-5">
+                Tech Enthusiast 👩🏾‍💻
             </div>
-            <div class="col-sm">
-                One of three columns
+            <div class="col-sm-3">
+                Class Teacher 👩🏾‍🏫
             </div>
-            <div class="col-sm">
-                One of three columns
+            <div class="col-sm-4">
+                Head of Children’s Church Ministry🚸
             </div>
         </div>
     </div>
-
+<br>
     <!-- Work Section - Cards-->
     <div class="row">
         <div class="col-sm-4">
