added content to lists

--- a/index.html
+++ b/index.html
@@ -77,43 +77,44 @@
     <div class="row">
         <div class="col-sm-4">
             <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="./images/Capture3.PNG" alt="Bootstrap Portfolio">
                 <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title"><strong>Bootstrap Portfolio</strong></h5>
+                    <p class="card-text">Module 3 Assignment - Build portfolio layout using the Bootstrap CSS Framework.</p>
+                    <a href="./index.html" class="btn btn-primary">Current site</a>
                 </div>
             </div>
         </div>
         <div class="col-sm-4">
             <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="./images/Capture2.PNG" alt="HTML/CSS Portfolio">
                 <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title"><strong>HTML/CSS Portfolio</strong></h5>
+                    <p class="card-text">Module 2 Assignment - Build portfolio layout using HTML/CSS </p>
+                    <a href="https://desireanunobi.github.io/desires-portfolio/" class="btn btn-primary">HTML/CSS Portfolio</a>
                 </div>
             </div>
         </div>
         <div class="col-sm-4">
             <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="./images/Module 1 Challenge Screenshot 1.PNG" alt="Refactor Horiseon Website">
                 <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+                    <h5 class="card-title"><strong>Refactor Horiseon Website</strong></h5>
+                    <p class="card-text">Module 1 Assignment - Refactor Horiseon Website using starter code</p>
+                    <a href="https://desireanunobi.github.io/sb-module-1-challenge/" class="btn btn-primary">Refactor Horiseon Website</a>
             </div>
         </div>
     </div>
-
+<br>
     <!-- Skills section -->
+    
     <ul class="list-group">
-        <li class="list-group-item active">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Morbi leo risus</li>
-        <li class="list-group-item">Porta ac consectetur ac</li>
-        <li class="list-group-item">Vestibulum at eros</li>
+        <li class="list-group-item active"><h2>Key Skills</h2></li>
+        <li class="list-group-item"><strong>Mathematics Specialist:</strong>Analytical and logical thinking for problem-solving. My ability to simplify complex concepts and foster a growth mindset will be valuable assets in approaching coding challenges.</li>
+        <li class="list-group-item"><strong>Effective Communication:</strong>Clear conveyance of ideas to diverse audiences. Whether explaining concepts to young minds or collaborating with colleagues; I excel at conveying ideas clearly.</li>
+        <li class="list-group-item"><strong> Adaptability:</strong> Quick learner, staying current with tech advancements.</li>
+        <li class="list-group-item"><strong> Problem-Solving Orientation:</strong> I am able to break down challenges into manageable parts, identify patterns, and develop systematic approaches to find effective solutions.</li>
+        <li class="list-group-item"><strong> Collaborative Team Player:</strong> I bring a warm, collaborative and cooperative spirit to any team I join and understand the value of shared ideas to reach a common goal.</li>
     </ul>
 
     <!-- About Me section-->
