added links to sections on navbar

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#"> Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./index.html"> Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> Tech Enthusiast </a>
+                        <a class="nav-link" href="#jumbotron"> Tech Enthusiast </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Projects</a>
+                        <a class="nav-link" href="#row">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Skills</a>
+                        <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About Me / Contact</a>
@@ -42,7 +42,7 @@
         </nav>
     </header>
     <!-- Hero Section -->
-    <div class="jumbotron">
+    <div class="jumbotron" id="jumbotron">
         <img src="./images/IMG_2171.jpg" alt="Desire" class="float-left" width="300px" height="300px">
         <h1 class="display-4"> Experienced Math Specialist Class Teacher Transitioning to Web Development/Software Engineering</h1>
         <p class="lead">Specializing in web development, I champion software engineering excellence through rigorous testing,
@@ -74,7 +74,7 @@
     </div>
 <br>
     <!-- Work Section - Cards-->
-    <div class="row">
+    <div class="row" id="row">
         <div class="col-sm-4">
             <div class="card">
                 <img class="card-img-top" src="./images/Capture3.PNG" alt="Bootstrap Portfolio">
@@ -108,7 +108,7 @@
 <br>
     <!-- Skills section -->
     
-    <ul class="list-group">
+    <ul class="list-group" id="skills">
         <li class="list-group-item active"><h2>Key Skills</h2></li>
         <li class="list-group-item"><strong>Mathematics Specialist:</strong>Analytical and logical thinking for problem-solving. My ability to simplify complex concepts and foster a growth mindset will be valuable assets in approaching coding challenges.</li>
         <li class="list-group-item"><strong>Effective Communication:</strong>Clear conveyance of ideas to diverse audiences. Whether explaining concepts to young minds or collaborating with colleagues; I excel at conveying ideas clearly.</li>
