fixed jumbotron content

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="./index.html"> Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#jumbotron"> Tech Enthusiast </a>
+                        <a class="nav-link" href="#jumbotron"> Info </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#row">Projects</a>
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Me / Contact</a>
+                        <a class="nav-link" href="#about">About Me / Contact</a>
                     </li>
                 </ul>
             </div>
@@ -44,7 +44,7 @@
     <!-- Hero Section -->
     <div class="jumbotron" id="jumbotron">
         <img src="./images/IMG_2171.jpg" alt="Desire" class="float-left" width="300px" height="300px">
-        <h1 class="display-4"> Experienced Math Specialist Class Teacher Transitioning to Web Development/Software Engineering</h1>
+        <h1 class="display-4"> <strong>Desire Anunobi</strong> - Experienced Math Specialist Class Teacher Transitioning to Web Development/Software Engineering</h1>
         <p class="lead">Specializing in web development, I champion software engineering excellence through rigorous testing,
             employing both automated and manual methods. Meticulously identifying and rectifying bugs, I ensure that
             software attains the highest standards before reaching end-users.</p>
@@ -109,12 +109,12 @@
     <!-- Skills section -->
     
     <ul class="list-group" id="skills">
-        <li class="list-group-item active"><h2>Key Skills</h2></li>
-        <li class="list-group-item"><strong>Mathematics Specialist:</strong>Analytical and logical thinking for problem-solving. My ability to simplify complex concepts and foster a growth mindset will be valuable assets in approaching coding challenges.</li>
-        <li class="list-group-item"><strong>Effective Communication:</strong>Clear conveyance of ideas to diverse audiences. Whether explaining concepts to young minds or collaborating with colleagues; I excel at conveying ideas clearly.</li>
-        <li class="list-group-item"><strong> Adaptability:</strong> Quick learner, staying current with tech advancements.</li>
-        <li class="list-group-item"><strong> Problem-Solving Orientation:</strong> I am able to break down challenges into manageable parts, identify patterns, and develop systematic approaches to find effective solutions.</li>
-        <li class="list-group-item"><strong> Collaborative Team Player:</strong> I bring a warm, collaborative and cooperative spirit to any team I join and understand the value of shared ideas to reach a common goal.</li>
+        <li class="list-group-item active"><h2>Key Takeaways from EdX Front End Web Development Bootcamp Course Outcomes</h2></li>
+        <li class="list-group-item"></li>
+        <li class="list-group-item"></li>
+        <li class="list-group-item"></li>
+        <li class="list-group-item"></li>
+        <li class="list-group-item"></li>
     </ul>
 
     <!-- About Me section-->
