updated list content

--- a/index.html
+++ b/index.html
@@ -110,11 +110,13 @@
     
     <ul class="list-group" id="skills">
         <li class="list-group-item active"><h2>Key Takeaways from EdX Front End Web Development Bootcamp Course Outcomes</h2></li>
-        <li class="list-group-item"></li>
-        <li class="list-group-item"></li>
-        <li class="list-group-item"></li>
-        <li class="list-group-item"></li>
-        <li class="list-group-item"></li>
+        <li class="list-group-item">Apply fundamental knowledge of web development with HTML, CSS, and JavaScript</li>
+        <li class="list-group-item">Create visually-compelling page layouts using UX design principles.</li>
+        <li class="list-group-item">Maintain code versioning and work across distributed teams using Git and GitHub.</li>
+        <li class="list-group-item">Manipulate page information and create interactivity using jQuery and React.</li>
+        <li class="list-group-item">Build modern web applications with industry-standard frameworks like Node.js and React.</li>
+        <li class="list-group-item">Prepare a portfolio of front-end development work.</li>
+        <li class="list-group-item">Have Fun !!! </li>
     </ul>
 
     <!-- About Me section-->
