add contact form/about me section

--- a/index.html
+++ b/index.html
@@ -118,9 +118,73 @@
         <li class="list-group-item">Prepare a portfolio of front-end development work.</li>
         <li class="list-group-item">Have Fun !!! </li>
     </ul>
-
+<br>
+<br>
     <!-- About Me section-->
-
+    <div class="row" id="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <img class="card-img-top" src="./images/IMG_2171.jpg" alt="Profile">
+                <div class="card-body">
+                    <h5 class="card-title"><strong><h4>🚀 Value Proposition:</h4></strong></h5>
+                    <p class="card-text"><h4>- Eager learner committed to growth.</h4>
+                        <h4>- A blend of education and tech insights for unique perspectives.</h4>
+                        <h4>- Actively seeking opportunities to contribute in a dynamic tech environment.</h4></p>
+                    <a href="https://desireanunobi.github.io/desires-portfolio/" class="btn btn-primary">My Portfolio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+                <form>
+                    <div class="form-row">
+                      <div class="form-group col-md-6">
+                        <label for="inputEmail4">First Name</label>
+                        <input type="email" class="form-control" id="inputEmail4" placeholder="Desire">
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label for="inputPassword4">Last Name</label>
+                        <input type="password" class="form-control" id="inputPassword4" placeholder="Anunobi">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputAddress">Email</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="daisy@gmail.co.uk">
+                      </div>
+                      <div class="form-group">
+                        <label for="inputAddress">Phone Number</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="0791234567">
+                      </div>
+                    <div class="form-group">
+                      <label for="inputAddress">Address</label>
+                      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                    </div>
+                    <div class="form-group">
+                      <label for="inputAddress2">Address 2</label>
+                      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                    </div>
+                    <div class="form-row">
+                      <div class="form-group col-md-6">
+                        <label for="inputCity">City</label>
+                        <input type="text" class="form-control" id="London">
+                      </div>
+                      <div class="form-group col-md-2">
+                        <label for="inputZip">Postcode</label>
+                        <input type="text" class="form-control" id="SW6 3ED">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <label class="form-check-label" for="gridCheck">
+                          Contact Me
+                        </label>
+                      </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </form>
+            </div>
+        </div>
 
 
     <!-- Javascript Link-->
